Bug 461667 - Do note show state events with no changes
Summary: Do note show state events with no changes
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-10 14:31 UTC by Jan Bidler
Modified: 2022-11-10 20:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Bidler 2022-11-10 14:31:00 UTC
SUMMARY
State events with no changes get shown by NeoChat with no description and only the user's name/avatar


STEPS TO REPRODUCE
1. Somehow send a state event with no changes

OBSERVED RESULT
On NeoChat 22.09 it shows the users' avatar and name.
On current master it shows "cleared their avatar"

EXPECTED RESULT
NeoChat should hide the event

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.7
Kernel Version: 6.0.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 1600 Six-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: AMD Radeon RX 570 Series
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B450M DS3H
Comment 1 Bug Janitor Service 2022-11-10 17:36:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/601
Comment 2 Tobias Fella 2022-11-10 20:29:27 UTC
Git commit 824fa469ef45c634ac4c525df9d7aa33cb55cfcb by Tobias Fella.
Committed on 10/11/2022 at 20:25.
Pushed by tfella into branch 'master'.

Don't send an empty message for member events without changes

M  +3    -0    src/neochatroom.cpp

https://invent.kde.org/network/neochat/commit/824fa469ef45c634ac4c525df9d7aa33cb55cfcb