Don't send an empty message for member events without changes

BUG: 461667